--- a/signup-form/signup-form-styles.css
+++ b/signup-form/signup-form-styles.css
@@ -2,14 +2,13 @@ body {
   font-family: serif;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
   display: flex;
   flex-direction: row;
   background-color: white;
 }
 
 h1 {
-  font-size: 70px;
+  font-size: 18px;
 }
 .img {
   display: flex;
@@ -25,83 +24,64 @@ h1 {
 }
 
 .form {
-  font-size: 50px;
   width: 60%;
-  margin: 0;
-  padding: 0;
-  margin-top: 5%;
+  padding: 40px 100px 0 20px ;
+  background-color: rgba(0, 0, 0, 0.034)
 }
-.form > * {
-  padding-left: 10%;
-  padding-right: 10%;
-}
+
 
 .form-label {
   font-weight: 900;
-  font-size: 30px;
+  font-size: 12px;
   display: block;
-  transition: all 0.5s;
-  transform: translateY(-3.4rem);
+  color: grey;
+  text-transform: uppercase;
 }
 
 .form-input {
-  border: 2px solid gray;
+  /* border: 2px solid gray; */
+  border: none;
   color: #333;
-  font-size: 50px;
-  padding: 0.2rem 0.2rem;
-  border-radius: 1.5rem;
-  width: 100%;
-  height: 50%;
-  transition: all 0.5s;
-  margin-top: 5%;
-  padding-right: 10%;
+  background-color: transparent;
+  font-size: 14px;
+  padding: 2px;
 }
+
 .form-input:focus {
   transition: 0.2s;
   outline: none;
   border: 2px solid blue;
+
 }
 
-.form-label {
-  opacity: 0;
-  visibility: hidden;
-}
+
 
 form {
-  padding-top: 3%;
-  width: 80%;
-  margin-left: 0%;
-  background-color: rgba(0, 0, 0, 0.034);
+  background-color: white;
 }
+
+.input-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-row-gap: 20px;
+}
+
 .inputs {
   display: flex;
   flex-direction: row;
   width: 90%;
 }
-.inputs > :last-child {
-  padding-left: 10%;
-}
+
 .form-end {
   margin-top: 20px;
   position: absolute;
   font-size: 10px;
 }
 
-.btn {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 15px 30px;
-  border-radius: 6px;
-  border: none;
-  font-size: 70px;
-  background: #009900;
-  box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1),
-    inset 0px 0.5px 0.5px rgba(255, 255, 255, 0.5),
-    0px 0px 0px 0.5px rgba(0, 0, 0, 0.12);
-  color: #dfdedf;
-  border-bottom: 2px solid rgb(139, 139, 139);
-  border-right: 2px solid rgb(139, 139, 139);
+.create-account-btn {
+  background-color: #009900;
+  color: white;
+  font-size: 20px;
 }
 .btn:hover {
   outline: 0;
@@ -109,7 +89,7 @@ form {
 }
 .login {
   color: #009900;
-  font-size: 70px;
+  font-size: 20px;
 }
 .error {
   border: 2px solid red;
