--- a/tic-tac-toe-game/game.css
+++ b/tic-tac-toe-game/game.css
@@ -1,5 +1,6 @@
 .main {
     text-align: center;
+    font-family: "Quicksand";
 }
 
 #board-game {
@@ -10,11 +11,13 @@
     
 }
 
-.box {
+.cells {
     width: 65px;
     height: 65px;
     border: 2px solid;
     box-shadow: 0 0 0 2px;
+    font-size: 40px;
+    text-align: center;
 }
 
 
