--- a/todo-list/src/styles.css
+++ b/todo-list/src/styles.css
@@ -28,17 +28,18 @@ h1 {
     padding-left: 10px;
 }
 
-.projects {
+.projects-headers{
     display: flex;
     justify-content: space-around;
     text-align: center;
 
 }
 
-.projects > p {
+.projects-headers > p {
     font-size: 20px;
     padding-right: 20px;
 }
+
 
 .projects-icons{
     display: flex;
@@ -48,6 +49,15 @@ h1 {
     width: 30px;
     height: 30px;
 
+}
+
+.view-projects {
+    margin-top: 20px;
+}
+
+.project-div {
+    margin-left: 20px;
+    font-size: 18px;
 }
 
 .content {
