--- a/todo-list/src/styles.css
+++ b/todo-list/src/styles.css
@@ -100,6 +100,7 @@ label {
     color: blue;
     margin-top: 10px;
 }
+
 .project-submit-btn, .task-submit-btn{
    background-color: #F4D03F;
    width: 70px;
@@ -158,6 +159,10 @@ select {
     height: 130px;
     box-shadow: rgba(0, 0, 0, 0.15) -8px 1px 5px, rgba(0, 0, 0, 0.15) 0px -3px 5px;
     border-radius: 10px;
+}
+
+.project-check{
+    width: 20px;
 }
 
 .card-text {
