--- a/weather-app/weather.css
+++ b/weather-app/weather.css
@@ -55,6 +55,10 @@ img {
     width: 24px;
 }
 
+.weather {
+    display: none;
+}
+
 .weather-icons {
     width: 160px;
 }
@@ -80,4 +84,11 @@ img {
 
 .text-details {
     font-size: 24px;
+}
+
+.error-message{
+    font-size: 20px;
+    margin-top: 8px;
+    text-align: left;
+    display: none;
 }
