--- a/Battleship/styles.css
+++ b/Battleship/styles.css
@@ -29,6 +29,7 @@
 .ship1-preview {
   width: 40px;
   height: 16px;
+  margin-left: 8px;
 }
 
 .ship1 {
@@ -38,6 +39,7 @@
 .ship2-preview {
   width: 60px;
   height: 16px;
+  margin-left: 8px;
 }
 
 .ship2 {
@@ -48,6 +50,7 @@
 .ship3-preview {
   width: 60px;
   height: 16px;
+  margin-left: 8px;
 }
 
 .ship3 {
@@ -58,6 +61,7 @@
 .ship4-preview {
   width: 80px;
   height: 16px;
+  margin-left: 8px;
 }
 
 .ship4 {
@@ -68,6 +72,7 @@
 .ship5-preview {
   width: 100px;
   height: 16px;
+  margin-left: 8px;
 }
 
 .ship5 {
