--- a/CV-Application-React/CV-application/src/components/styles/App.css
+++ b/CV-Application-React/CV-application/src/components/styles/App.css
@@ -30,7 +30,7 @@ body {
 .input-section {
   display: flex;
   flex-direction: column;
-  flex: 1;
+  flex: 0.5;
   margin-right: 20px;
   overflow-y: auto;
   align-items: center;
@@ -53,6 +53,7 @@ body {
   min-height: 200px;
 }
 
+
 .section-content {
   padding: 0 15px 15px 15px;
   border: none;
@@ -63,7 +64,24 @@ body {
   padding: 15px;
 }
 
+.paper {
+  width: 90%;
+}
+.open-section div {
+  cursor: pointer;
+  user-select: none;
+  padding: 15px;
+  margin: 0;
+  background-color: white;
+  font-size: 18px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
+.open-section div span:last-child {
+  font-size: 12px;
+}
 
 h3 {
   padding: 15px;
