adding css for home

--- a/ShoppingCart/my-shopping-cart/src/styles/Navbar.css
+++ b/ShoppingCart/my-shopping-cart/src/styles/Navbar.css
@@ -1,6 +1,6 @@
 img {
-  width: 20px;
-  height: 20px;
+  width: 36px;
+  height: 36px;
 }
 .navContainer {
   display: flex;
@@ -16,4 +16,5 @@ img {
 .navCenter a {
   text-decoration: none;
   color: black;
+  font-size: 24px;
 }
