--- a/ShoppingCart/my-shopping-cart/src/index.css
+++ b/ShoppingCart/my-shopping-cart/src/index.css
@@ -3,10 +3,11 @@
   padding: 0;
 }
 
-body {
-  height: 100vh;
+html, body {
+  height: 100%;
+  margin: 0;
 }
+
 #root {
   height: 100%;
-  overflow: auto;
 }
