--- a/ShoppingCart/my-shopping-cart/src/styles/Navbar.css
+++ b/ShoppingCart/my-shopping-cart/src/styles/Navbar.css
@@ -6,6 +6,7 @@ img {
   display: flex;
   justify-content: space-between;
   padding: 16px 24px;
+  background-color: bisque;
 }
 .navCenter {
   margin: 0 auto;
