--- a/ShoppingCart/my-shopping-cart/src/App.css
+++ b/ShoppingCart/my-shopping-cart/src/App.css
@@ -1,4 +1,8 @@
 
 .pageContainer{
- height: 100%;
+ min-height: 100vh;
+ display: flex;
+ flex-direction: column;
+ overflow-y: auto;
+ padding-bottom: 20px;
 }
