--- a/ShoppingCart/my-shopping-cart/src/styles/Home.css
+++ b/ShoppingCart/my-shopping-cart/src/styles/Home.css
@@ -3,7 +3,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  height: 100%;
+  flex: 1;
   display: flex;
   align-items: center;
   justify-content: flex-end;
