--- a/ShoppingCart/my-shopping-cart/src/styles/Navbar.css
+++ b/ShoppingCart/my-shopping-cart/src/styles/Navbar.css
@@ -1,12 +1,30 @@
+.cardIconWrapper{
+  position: relative;
+}
+
 img {
   width: 36px;
   height: 36px;
 }
+
+.itemCounter {
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  background-color: red;
+  text-align: center;
+  position: absolute;
+  right: 10px;
+  top: 18px;
+}
+
 .navContainer {
   display: flex;
   justify-content: space-between;
   padding: 16px 24px;
   background-color: bisque;
+  height: 6vh;
+  align-items: center;
 }
 .navCenter {
   margin: 0 auto;
