--- a/ShoppingCart/my-shopping-cart/src/styles/Shop.css
+++ b/ShoppingCart/my-shopping-cart/src/styles/Shop.css
@@ -1,12 +1,11 @@
 
 .shopContainer {
     height: 100%;
-    overflow-y: auto;
 }
 
 .top {
   display: flex;
-  justify-content: space-between;
+  justify-content:center;
   padding: 20px;
 }
 
@@ -59,6 +58,7 @@
     align-items: center;
     text-align: center;
     padding: 10px 20px;
+    border-radius: 8px;
 }
 
 .product h3 {
@@ -72,6 +72,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 .addCount button{
