--- a/ShoppingCart/my-shopping-cart/src/styles/Shop.css
+++ b/ShoppingCart/my-shopping-cart/src/styles/Shop.css
@@ -32,8 +32,18 @@
 }
 
 .imgWrapper img {
-    width: auto;
-    height: 150px;
+    width: 150px; 
+    height: 180px; 
+    object-fit: contain; 
+}
+
+
+.imgWrapper{
+    width: 100%; 
+    height: 200px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -59,10 +69,12 @@
     text-align: center;
     padding: 10px 20px;
     border-radius: 8px;
+    gap: 8px
 }
 
 .product h3 {
-    font-size: 28px;
+    font-size: 24px;
+    height: 60px
 }
 
 .addCart{
@@ -71,9 +83,11 @@
     height: 48px;
     display: flex;
     justify-content: center;
-    align-items: center;
+
     cursor: pointer;
+    margin: auto;
 }
+
 
 .addCount button{
     height: 40px;
@@ -82,4 +96,9 @@
 
 .addCount span {
     margin: 0 8px;
+}
+
+a{
+    text-decoration: none;
+    color: #333
 }
